plugins/kotlin/idea/tests/testData/gradle/highlighting/gradle8/gradleSampleAndroidApps/app/build.gradle.kts.highlighting.k2
plugins {
    id("com.android.application") version "7.3.0"
}

repositories {
    google()
    mavenCentral()
}

android {
    <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] '@Incubating() @Deprecated(...) fun compileSdkVersion(apiLevel: Int): Unit' is deprecated. Replaced by compileSdk.'")!>compileSdkVersion<!>(30)
    defaultConfig {
        applicationId = "org.gradle.samples"
        <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] '@Deprecated(...) @Incubating() fun minSdkVersion(minSdkVersion: Int): Unit' is deprecated. Replaced by minSdk property.'")!>minSdkVersion<!>(16)
        <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] '@Deprecated(...) @Incubating() fun targetSdkVersion(targetSdkVersion: Int): Unit' is deprecated. Replaced by targetSdk property.'")!>targetSdkVersion<!>(30)
        versionCode = 1
        versionName = "1.0"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        getByName("release") {
            isMinifyEnabled = false
            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
        }
    }
}

dependencies {
    implementation("androidx.appcompat:appcompat:1.2.0")
    implementation("com.google.android.material:material:1.2.0")
    implementation("androidx.constraintlayout:constraintlayout:2.0.4")
    testImplementation("junit:junit:4.13.1")
    androidTestImplementation("androidx.test.ext:junit:1.1.2")
    androidTestImplementation("androidx.test.espresso:espresso-core:3.3.0")
}
